# core/core-persistence/core-persistence-api/src/main/java/ai/wanaku/core/persistence/types/ServiceTargetEntity.java
@@ -1,23 +1,20 @@
 package ai.wanaku.core.persistence.types;
 
-import ai.wanaku.api.types.management.Configuration;
 import ai.wanaku.core.mcp.providers.ServiceTarget;
 import ai.wanaku.core.mcp.providers.ServiceType;
-
 import java.util.Map;
 
 @Deprecated
 public class ServiceTargetEntity extends ServiceTarget implements WanakuEntity {
 
-    private Map<String, Configuration> configurations;
 
-    public ServiceTargetEntity(String service, String host, int port, ServiceType serviceType) {
-        super(service, host, port, serviceType);
+    public ServiceTargetEntity(String service, String host, int port, ServiceType serviceType, Map<String, String> configurations) {
+        super(service, host, port, serviceType, configurations);
     }
 
     // Constructor needed by Jackson
     public ServiceTargetEntity() {
-        super(null, null, 0, null);
+        super(null, null, 0, null, null);
     }
 
     @Override
@@ -30,11 +27,5 @@ public class ServiceTargetEntity extends ServiceTarget implements WanakuEntity {
         // Do nothing, the Id is mapped via service
     }
 
-    public Map<String, Configuration> getConfigurations() {
-        return configurations;
-    }
 
-    public void setConfigurations(Map<String, Configuration> configurations) {
-        this.configurations = configurations;
-    }
 }
